# kero-test

./: .env.dev  .env.example  .gitignore  README.md  docker-compose.kraft.yml  docker-compose.yml
processor/: Dockerfile  pyproject.toml  pytest.ini
processor/app/: main.py
processor/app/config/: config.py  events.py
processor/app/handlers/: event_handler.py
processor/app/models/: event.py
processor/app/services/database/: database_factory.py
processor/app/services/database/interface/: database.py
processor/app/services/database/postgres/: config.py  postgres.py
processor/app/services/messaging/: messaging_factory.py
processor/app/services/messaging/interface/: consumer.py
processor/app/services/messaging/kafka/: config.py  consumer.py
processor/app/tests/: test_handler.py
processor/app/utils/: time_conversion.py
receiver/: Dockerfile  mypy.ini  pyproject.toml
receiver/app/: deps.py  main.py
receiver/app/api/: main.py
receiver/app/api/routes/: events.py
receiver/app/config/: config.py
receiver/app/core/: config.py
receiver/app/models/: event.py  models.py
receiver/app/services/messaging/: messaging_factory.py
receiver/app/services/messaging/interface/: producer.py
receiver/app/services/messaging/kafka/: config.py  producer.py
receiver/app/tests/: test_events_router.py
receiver/app/utils/: time_conversion.py
