[project]
name = "receiver"
version = "0.1.0"
description = "Receive data with REST API and push them to Kafka"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiokafka>=0.12.0",
    "fastapi>=0.118.0",
    "pydantic-settings>=2.11.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
]


[tool.poe.tasks]
test = "pytest --cov"
lint = "ruff check ."
format = "ruff format ."
mypy = "mypy app/"
